--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,9 +2,9 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     mariadb
+    database_host:     127.0.0.1
     database_port:     ~
-    database_name:     akademija
+    database_name:     podelis
     database_user:     root
     database_password: root
     # You should uncomment this if you want use pdo_sqlite
