--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,17 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
+
 security:
 
+    encoders:
+        AppBundle\Entity\User:
+          algorithm: bcrypt
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+        db_provider:
+            entity:
+                class: AppBundle:User
+                property: name
         in_memory:
             memory: ~
 
@@ -15,6 +23,16 @@ security:
 
         main:
             anonymous: ~
+            pattern:    ^/
+            http_basic: ~
+            provider: db_provider
+            form_login:
+                login_path: login
+                check_path: login
+
+    access_control:
+     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+     - { path: ^/, roles: ROLE_ADMIN }
             # activate different ways to authenticate
 
             # http_basic: ~
