--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
         db_provider:
             entity:
                 class: AppBundle:User
-                property: name
+                property: username
         in_memory:
             memory: ~
 
@@ -32,7 +32,6 @@ security:
 
     access_control:
      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-     - { path: ^/, roles: ROLE_ADMIN }
             # activate different ways to authenticate
 
             # http_basic: ~
