--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,6 @@ parameters:
 #    parameter_name: value
 
 services:
-    app.example:
-        class: AppBundle\Service\ExampleService
-        arguments: ["@doctrine.orm.entity_manager"]
+    app.send_email:
+        class: AppBundle\Service\RegisterEmail
+        arguments: ["@mailer", "@templating"]
