--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,3 +66,19 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+
+knpu_oauth2_client:
+    clients:
+        # the key "facebook_main" can be anything, it
+        # will create a service: "knpu.oauth2.client.facebook_main"
+        facebook:
+            # this will be one of the supported types
+            type: facebook
+            client_id: 193875304387366
+            client_secret: 86007a1fdbddf68b400a190c5f720e23
+            # the route that you're redirected to after
+            # see the controller example below
+            redirect_route: connect_facebook_check
+            redirect_params: {}
+            graph_api_version: v2.8
