--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,11 +8,6 @@ services:
         class: AppBundle\Service\RegisterEmail
         arguments: ["@mailer", "@templating"]
 
-    app.facebook_provider:
-        class: League\OAuth2\Client\Provider\Facebook
-        arguments:
-            -
-                clientId: %facebook_app_id%
-                clientSecret: %facebook_app_secret%
-                graphApiVersion: v2.8
-                redirectUri: "@=service('router').generate('connect_facebook_check', {}, true)"
+    app.facebook_authenticator:
+        class: AppBundle\Service\FacebookAuthenticator
+        arguments: ["@oauth2.registry", "@doctrine.orm.entity_manager", "@router"]
