--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "league/oauth2-client": "~1.0@dev",
-        "league/oauth2-facebook": "^1.4"
+        "league/oauth2-facebook": "^1.4",
+        "knpuniversity/oauth2-client-bundle": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
