--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+sandbox:
+    resource: "@SandboxBundle/Controller"
+    prefix:   /
+    type: annotation
+
 app:
     resource: "@AppBundle/Controller"
     type: annotation
