--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,17 +68,47 @@ swiftmailer:
     spool:     { type: memory }
 
 
-knpu_oauth2_client:
-    clients:
-        # the key "facebook_main" can be anything, it
-        # will create a service: "knpu.oauth2.client.facebook_main"
-        facebook:
-            # this will be one of the supported types
-            type: facebook
-            client_id: 193875304387366
-            client_secret: 86007a1fdbddf68b400a190c5f720e23
-            # the route that you're redirected to after
+#hwi_oauth:
+#    resource_owners:
+#        any_name:
+#            type:                facebook
+#            client_id:           193875304387366
+#            client_secret:       86007a1fdbddf68b400a190c5f720e23
+#            options:
+#                csrf: true
+
+#hwi_oauth:
+    #this is my custom user provider, created from FOSUBUserProvider - will manage the
+    #automatic user registration on your site, with data from the provider (facebook. google, etc.)
+    #and also, the connecting part (get the token and the user_id)
+    #connect:
+    #    account_connector: my_user_provider
+    # name of the firewall in which this bundle is active, this setting MUST be set
+    #firewall_name: main
+    #fosub:
+    #    username_iterations: 30
+    #    properties:
+            # these properties will be used/redefined later in the custom FOSUBUserProvider service.
+    #        facebook: facebook_id
+    #        google: google_id
+    #resource_owners:
+    #    facebook:
+    #        type:                facebook
+    #        client_id:           193875304387366%
+    #        client_secret:       86007a1fdbddf68b400a190c5f720e23
+    #        scope:               ""
+
+#knpu_oauth2_client:
+#    clients:
+#        # the key "facebook_main" can be anything, it
+#        # will create a service: "knpu.oauth2.client.facebook_main"
+#        facebook:
+#            # this will be one of the supported types
+#            type: facebook
+#            client_id: 193875304387366
+#            client_secret: 86007a1fdbddf68b400a190c5f720e23
+#            # the route that you're redirected to after
             # see the controller example below
-            redirect_route: connect_facebook_check
-            redirect_params: {}
-            graph_api_version: v2.8
+#            redirect_route: connect_facebook_check
+#            redirect_params: {}
+#            graph_api_version: v2.8
