--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,18 @@ app:
 
 logout:
     path: /logout
+
+#hwi_oauth_security:
+#    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+#    prefix: /login
+
+#hwi_oauth_connect:
+#    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+#    prefix: /login
+
+#hwi_oauth_redirect:
+#    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+#    prefix:   /login
+#
+#facebook_login:
+#path: /login/check-facebook
