--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "league/oauth2-client": "~1.0@dev",
-        "league/oauth2-facebook": "^1.4",
-        "knpuniversity/oauth2-client-bundle": "^1.4"
+        "hwi/oauth-bundle": "^0.5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
