--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "league/oauth2-client": "~1.0@dev",
         "league/oauth2-facebook": "^1.4",
-        "knpuniversity/oauth2-client-bundle": "^1.4"
+        "knpuniversity/oauth2-client-bundle": "^1.4",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
