--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "gulp-scss-lint": "^0.4.0",
     "gulp-uglify": "^1.4.2",
     "jquery": "2.2.*"
+  },
+  "dependencies": {
+    "gulp-install": "^0.6.0"
   }
 }
