--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,9 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            numeric_functions:
+                Rand: AppBundle\DoctrineFunction\Rand
 
 # Swiftmailer Configuration
 swiftmailer:
