--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,11 +2,11 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     127.0.0.1
+    database_host:     stud.if.ktu.lt
     database_port:     ~
-    database_name:     podelis
-    database_user:     root
-    database_password: root
+    database_name:     eimmar
+    database_user:     eimmar
+    database_password: ipaequ1eeGhaikee
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
