--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,16 +2,18 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: stud.if.ktu.lt
-    database_port: null
-    database_name: eimmar
-    database_user: eimmar
-    database_password: ipaequ1eeGhaikee
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
-    secret: SuperSecretAcademyHashKeyDoNotTellAnyone
+    database_host:     127.0.0.1
+    database_port:     ~
+    database_name:     podelis
+    database_user:     root
+    database_password: root
+    # You should uncomment this if you want use pdo_sqlite
+    # database_path: "%kernel.root_dir%/data.db3"
+
+    mailer_transport:  smtp
+    mailer_host:       127.0.0.1
+    mailer_user:       ~
+    mailer_password:   ~
 
     # A secret key that's used to generate certain security-related tokens
     secret:            SuperSecretAcademyHashKeyDoNotTellAnyone
