--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-sass": "^2.0.4",
     "gulp-scss-lint": "^0.4.0",
     "gulp-uglify": "^1.4.2",
-    "jquery": "2.2.*"
+    "jquery": "2.2.*",
+    "jquery.countdown": "^1.2.5"
   },
   "dependencies": {
     "gulp-install": "^0.6.0"
