testStarter service created

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -23,5 +23,9 @@ services:
             - { name: form.type }
 
     app.user:
-      class: AppBundle\Service\UserControl
-      arguments: ["@doctrine.orm.entity_manager"]
+        class: AppBundle\Service\UserControl
+        arguments: ["@doctrine.orm.entity_manager"]
+
+    app.test_starter:
+        class: AppBundle\Service\TestStarter
+        arguments: ["@session"]
