--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,21 +69,36 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+    registration:
+        form:
+            type: AppBundle\Form\UserType
 
-knpu_oauth2_client:
-    clients:
-        # the key "facebook_main" can be anything, it
-        # will create a service: "knpu.oauth2.client.facebook_main"
+hwi_oauth:
+    connect:
+        account_connector: my_user_provider
+    firewall_names: [main]
+    fosub:
+        username_iterations: 30
+        properties:
+            facebook: facebook_id
+#            google: google_id
+    resource_owners:
         facebook:
-            # this will be one of the supported types
-            type: facebook
-            client_id: 193875304387366
-            client_secret: 86007a1fdbddf68b400a190c5f720e23
-            # the route that you're redirected to after
-            # see the controller example below
-            redirect_route: connect_facebook_check
-            redirect_params: {}
-            graph_api_version: v2.8
+            type:                facebook
+            client_id:           193875304387366
+            client_secret:       86007a1fdbddf68b400a190c5f720e23
+            infos_url:     "https://graph.facebook.com/me?fields=id,name,first_name,middle_name,last_name,locale,email"
+            options:
+                display: popup
+        google:
+            type:                google
+            client_id:           741333593484-ik9lkquo65358uka2n4rpfm9ksnmvgji.apps.googleusercontent.com
+            client_secret:        eXGVsbGtbglfcHoGX0MUjnGp
+            scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
 
 
 assetic:
