test codeception added

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "league/oauth2-client": "~1.0@dev",
         "league/oauth2-facebook": "^1.4",
         "knpuniversity/oauth2-client-bundle": "^1.4",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "codeception/codeception": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
