--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,8 +5,8 @@ parameters:
     database_host:     127.0.0.1
     database_port:     ~
     database_name:     podelis
-    database_user:     root
-    database_password: root
+    database_user:     podelis
+    database_password: 6Nejj7pUVCEpko
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
