--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,8 +46,9 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-        #mapping_types:
-        #    enum: string
+        mapping_types:
+            enum: string
+        server_version: "5.7"
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
