--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: php
 php:
   - 7.0
+before_update:
+ - php /home/travis/.phpenv/versions/5.4.25/bin/composer.phar self update
 services:
   - mysql
 before_script:
